--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Webpage
 </title>
 </head>
 
-<body background="b.gif">
+<body background="html/b.gif">
 <br>
 <h1><pre><font color="yellow" face="Castellar">        LOUNGE</font> <font color="white" face="Castellar">HOTEL</font></pre></h1>   
          
