--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Webpage
 <tr>
 <td>
 
-<img src="Lobby.jpg" width="700" height="400">
+<img src="html/Lobby.jpg" width="700" height="400">
 
 </td>
 
@@ -151,7 +151,7 @@ Webpage
 <td width="140"><pre>
  <font color="white" size="5" face="century">About Us</font>
 </pre>
-<center><img src="female.jpg" width="120" height="120" /></center><br />
+<center><img src="html/female.jpg" width="120" height="120" /></center><br />
 <br><button>READ MORE</button>
 </td>
 <td width="180">
